t/lib/Locale/MaybeMaketext/Tests/InvalidDetectors/DetectorMissingDetect.pm
package Locale::MaybeMaketext::Tests::InvalidDetectors::DetectorMissingDetect;
use strict;
use warnings;
use vars;
use utf8;

sub somethingtest {
    return 0;
}

sub othertest {
    return 0;
}

1;
